--- a/index.html
+++ b/index.html
@@ -127,9 +127,52 @@
            <div class="footer">
                 <div class="line"></div>
            </div>
-
         </div>
-        <div class="music-player">music-player</div>
+
+        <div class="music-player">
+            <div class="album">
+                <div class="al-title">
+                    <img src="./Homework Assets/album_picture.jpeg" class="al-img">
+                    <div class="al-p">
+                        <p class="card-title">Daylight</p>
+                        <p class="card-info">David Kushner</p>
+                    </div>
+                </div>
+                <div class="album-icon">
+                    <img src="./Homework Assets/album_icon2.png">
+                    <img src="./Homework Assets/album_icon1.png">
+                </div>
+            </div>
+
+            <div class="player">
+                <div class="player-controls">
+                    <img src="./assets/player_icon1.png" class="player-control-icon" >
+                    <img src="./assets/player_icon2.png" class="player-control-icon" >
+                    <img src="./assets/player_icon3.png" class="player-control-icon" style="opacity: 1; height: 2rem;" >
+                    <img src="./assets/player_icon4.png" class="player-control-icon" >
+                    <img src="./assets/player_icon5.png" class="player-control-icon" >
+
+                </div>
+                <div class="playback-bar">
+                    <span class="curr-time">00:00</span>
+                    <input type="range" min="0" max="100" class="progress-bar" step="1">
+                    <span class="total-time">03:33</span>
+                </div>
+            </div>
+
+            <div class="controls">
+                <div class="controls-icon">
+                    <img src="./Homework Assets/controls_icon1.png" style="height: 2.5rem;">
+                    <img src="./Homework Assets/controld_icon2.png" style="height: 2.5rem;">
+                    <img src="./Homework Assets/controls_icon3.png" style="margin-top: 0.5rem;">
+                    <img src="./Homework Assets/controls_icon4.png" style="margin-top: 0.5rem;">
+                    <img src="./Homework Assets/controls_icon5.png" style="height: 2.5rem;">
+                </div>
+                <div class="vol-bar">
+                    <input type="range" min="0" max="100" class="volum-bar" step="1">
+                </div>
+            </div>
+        </div>
     </div>
 
     
